[BO-73] Added sorting and fetching functionalities for faq entities